# piano

./: package.json
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs  midi_parser.rs  motor_drivers.rs
